libs/@local/hashql/hir/tests/ui/lower/inference/collect-variable.jsonc
//@ run: fail
//@ description: Collect variables that aren't explicitly mentioned
[
  "let",
  "foo",
  "Dict<Integer | _, String>",
  //~^ ERROR Cannot infer type for this variable
  { "#literal": 2 },
  "foo"
]
